# supervisorio

./: .gitignore  api.http  api.py  build_exe.py  docker-compose.yml  main.py  pyproject.toml  readme.MD  run.py
.github/workflow/: tests.yml
config/: settings.toml
docs/: event.excalidraw  event_types.MD  settings.MD  workflow.excalidraw
src/supervisorio/api/: routes.py
src/supervisorio/config/: settings.py
src/supervisorio/core/: buffer.py  config.py  logger.py  monitor.py
src/supervisorio/core/types/: MachineEventPayload.py  ModbusReadPayload.py  event_types.py  metrics.py
src/supervisorio/infrastructure/: CW.py  modbus_reader.py
src/supervisorio/infrastructure/database/: connection.py  repositories.py
src/supervisorio/services/: worker.py
src/supervisorio/utils/: date.py  event_manager.py
tests/core/: test_data_buffer.py
tests/utils/: test_date.py  test_event_manager.py
