[project]
name = "service"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Racki",email = "ricardo_racki@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pymodbus (>=3.11.4,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "toml (>=0.10.2,<0.11.0)",
    "types-toml (>=0.10.8.20240310,<0.11.0.0)"
]
[tool.poetry]
packages = [{ include = "supervisorio", from = "src" }]

[tool.taskipy.tasks]
dev = 'poetry run python run.py'
clear = 'del "*.spec" && rd /s /q dist build data'
build = 'poetry run python build_exe.py && mkdir .\\dist\\config 2>nul & copy /Y .\\config\\settings.toml .\\dist\\config\\settings.toml'
docker = "docker compose up -d"
copy_config = "mkdir .\\dist\\config 2>nul & copy /Y .\\config\\settings.toml .\\dist\\config\\settings.toml"
run_build = ".\\dist\\SupervisorIndustrial.exe"
rebuild = "task clear & task build"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.17.0,<7.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
